kubernetes/base/nginx-gateway/nginx-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-gateway
  template:
    metadata:
      labels:
        app: nginx-gateway
    spec:
      shareProcessNamespace: true
      serviceAccountName: nginx-gateway
      volumes:
      - name: nginx-config
        emptyDir: { }
      - name: var-lib-nginx
        emptyDir: { }
      - name: njs-modules
        configMap:
          name: njs-modules
      containers:
      - image: ghcr.io/nginxinc/nginx-kubernetes-gateway:edge
        imagePullPolicy: Always
        name: nginx-gateway
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx
        securityContext:
          runAsUser: 1001
          # FIXME(pleshakov) - figure out which capabilities are required
          # dropping ALL and adding only CAP_KILL doesn't work
          # Note: CAP_KILL is needed for sending HUP signal to NGINX main process
        args:
        - --gateway-ctlr-name=k8s-gateway.nginx.org/nginx-gateway-controller
        - --gatewayclass=nginx
      - image: nginx:1.23
        imagePullPolicy: IfNotPresent
        name: nginx
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx
        - name: var-lib-nginx
          mountPath: /var/lib/nginx
        - name: njs-modules
          mountPath: /usr/lib/nginx/modules/njs
